---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 3/2/26
  Features:
    - Hex core loaders can now be flipped.
  Changes:
    - Changed how progress bars for each statistic in the hex rank GUI visually progress, from logarithmic to cubed logarithmic (slows down how fast they go up).
  Bugfixes:
    - Fixed that spaceship speed readings in the hex rank GUI were on the wrong scale (per tick instead of per second).
    - Fixed that the counter for unique items traded in the hex rank GUI wasn't per surface as the description says it is.
    - Fixed that total resources depleted wasn't counting towards hex rank.
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 3/2/26
  Bugfixes:
    - Fixed hex rank HUD showing a scroll bar on some screens.
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 3/2/26
  Features:
    - Added the hex rank system, unlocked via the new early-game quest.
    - Added new quest: "Look at My Score".
  Minor Features:
    - Added command /disable-quest, which lets you skip a quest in the progression path.  For example, "/disable-quest biter-rammer" to avoid having to ram biters with vehicles to progress.
        Note that this also permanently makes its specific rewards unobtainable.  To skip and get the rewards, use "/complete-quest <quest>".
    - Added command /reload-item-buff-effects, for resetting all item buff effects.  Does not reset levels, only what effects are being applied.
        There should never be a need for this function going forward, but it now exists if anything goes wrong (again).
    - A different sound from "console message" can now be played when a quest gets completed, configurable in player mod settings.
  Changes: